--- a/docs/fr/modules/02) Config/main/Status-conf.tex
+++ b/docs/fr/modules/02) Config/main/Status-conf.tex
@@ -132,7 +132,7 @@
 \end{justify}
 
 \begin{justify}
-    Cette variable de statut sert à totalement autoriser \textbf{OU} empêcher l'exécution de la fonction \textbf{\color{func}BU::CheckProjectLogStatus}, notamment dans le cas où une fonction d'affichage de texte formaté est appelée à l'intérieur de cette fonction, où via une autre fonction appelée dans le même cas.
+    Cette variable de statut sert à totalement autoriser \textbf{OU} empêcher l'exécution de la fonction \textbf{\color{func}BU.CheckProjectLogStatus}, notamment dans le cas où une fonction d'affichage de texte formaté est appelée à l'intérieur de cette fonction, où via une autre fonction appelée dans le même cas.
 \end{justify}
 
 % ------------
@@ -146,7 +146,7 @@
 \end{justify}
 
 \begin{justify}
-    Cette variable de statut sert à déterminer la gravité d'une erreur selon le contexte. Ce choix est à déterminer par l'utilisateur, et la valeur de cette variable est traitée par la fonction \textbf{\color{func}BU::Main::Errors::HandleErrors()} du fichier de librairie \textbf{\color{lime}Checkings.lib}.
+    Cette variable de statut sert à déterminer la gravité d'une erreur selon le contexte. Ce choix est à déterminer par l'utilisateur, et la valeur de cette variable est traitée par la fonction \textbf{\color{func}BU.Main.Errors.HandleErrors()} du fichier de librairie \textbf{\color{lime}Checkings.lib}.
 \end{justify}
 
 % ------------
