--- a/docs/fr/modules/02) Config/main/Text-conf.tex
+++ b/docs/fr/modules/02) Config/main/Text-conf.tex
@@ -113,9 +113,9 @@
         \hline
         \textbf{Fonction} & \textbf{Fichier de définition}\\
         \hline
-        \textbf{\color{func}BU::ModuleInit::DisplayInitGlobalVarsInfos} & \textbf{\color{path}Bash-utils-init.sh}\\
+        \textbf{\color{func}BU.ModuleInit.DisplayInitGlobalVarsInfos} & \textbf{\color{path}Bash-utils-init.sh}\\
         \hline
-        \textbf{\color{func}BU::ModuleInit::Msg}                        & \textbf{\color{path}Bash-utils-init.sh}\\
+        \textbf{\color{func}BU.ModuleInit.Msg}                        & \textbf{\color{path}Bash-utils-init.sh}\\
         \hline
     \end{tabular}
 \end{justify}
