--- a/docs/fr/modules/04) Functions/main/Errors.tex
+++ b/docs/fr/modules/04) Functions/main/Errors.tex
@@ -125,11 +125,11 @@
 \subsection{Sous-section CLASSIC ERRORS HANDLING}\color{white}
 
 \color{blue}
-\subsubsection{BU::Main::Errors::HandleSmallErrors}\color{white}
+\subsubsection{BU.Main.Errors.HandleSmallErrors}\color{white}
 
 \begin{justify}
     \textbf{Description :}\\
-    Cette fonction affiche un simple message d'avertissement ou d'erreur, selon le contexte choisi, contrairement à la fonction \textbf{\color{mauve}BU::Main::Errors::HandleErrors}, qui fait un rapport complet de l'erreur, et qui est à priviliégier pour de plus grosses erreurs.
+    Cette fonction affiche un simple message d'avertissement ou d'erreur, selon le contexte choisi, contrairement à la fonction \textbf{\color{mauve}BU.Main.Errors.HandleErrors}, qui fait un rapport complet de l'erreur, et qui est à priviliégier pour de plus grosses erreurs.
 \end{justify}
 
 \begin{justify}
@@ -144,7 +144,7 @@
 
         \item \textbf{\color{orange}p\_cpls} Ce paramètre attend la chaîne de caractère \textbf{CPLS}, pour changer la valeur de la variable globale de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_ECHO}.\\
 
-        \item \textbf{Note : CPLS} sont les initiales de la fonction \textbf{\color{mauve}BU::CheckProjectLogStatus}, qui vérifie si et comment un message peut être redirigé vers un fichier de logs, et où un rappel d'une fonction \textbf{\color{mauve}BU::Echo<...>} avec la valeur de la variable globale de statut mentionnée ci-dessus à \textbf{false} provoquerait une boucle infinie.
+        \item \textbf{Note : CPLS} sont les initiales de la fonction \textbf{\color{mauve}BU.CheckProjectLogStatus}, qui vérifie si et comment un message peut être redirigé vers un fichier de logs, et où un rappel d'une fonction \textbf{\color{mauve}BU.Echo<...>} avec la valeur de la variable globale de statut mentionnée ci-dessus à \textbf{false} provoquerait une boucle infinie.
     \end{itemize}
 \end{justify}
 
@@ -154,11 +154,11 @@
 \end{justify}
 
 \begin{justify}
-    Passer cette valeur à ce paramètre est absolument nécessaire dans les situations où l'appel des fonctions \textbf{\color{mauve}BU::Echo<...>()} peut provoquer une boucle infinie.
+    Passer cette valeur à ce paramètre est absolument nécessaire dans les situations où l'appel des fonctions \textbf{\color{mauve}BU.Echo<...>()} peut provoquer une boucle infinie.
 \end{justify}
 
 \begin{justify}
-    Ensuite, elle vérifie quelle valeur a été passée en premier argument, puis affiche la chaîne de caractères passée en deuxième argument selon la valeur du premier (W = warning, donc appel de la fonction \textbf{\color{mauve}BU::EchoWarning}, et E = error, donc appel de la fonction \textbf{\color{mauve}BU::EchoError}).
+    Ensuite, elle vérifie quelle valeur a été passée en premier argument, puis affiche la chaîne de caractères passée en deuxième argument selon la valeur du premier (W = warning, donc appel de la fonction \textbf{\color{mauve}BU.EchoWarning}, et E = error, donc appel de la fonction \textbf{\color{mauve}BU.EchoError}).
 \end{justify}
 
 \begin{justify}
