--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -53,7 +53,7 @@ __BU_MAIN_ARGS_LIB__MSG__ARGC__FUNCTION_HAS_NOT_ENOUGH_ARGS,This variable stores
 __BU_MAIN_ARGS_LIB__MSG__ARGC__FUNCTION_HAS_NOT_ENOUGH_ARGS__ADVICE,This variable stores the message that ,Please pass %s more arguments to the %s function,,,
 __BU_MAIN_ARGS_LIB__MSG__ARGC__FUNCTION_HAS_TOO_MUCH_ARGS,This variable stores the message that ,THE FUNCTION %s HAS TOO MUCH ARGUMENTS,,,
 __BU_MAIN_ARGS_LIB__MSG__ARGC__FUNCTION_HAS_TOO_MUCH_ARGS__ADVICE,This variable stores the message that ,Please remove %s arguments to the %s function,,,
-__BU_MAIN_ARGS_LIB__MSG__ARGC__FUNCTION_ARGC_NOT_POS_INT,This variable stores the message that ,"THE $p_funcname FUNCTION'S ARGUMENT COUNTER $(BU::DechoHighlightVar ""$(echo -n '$')p_argcount"") PARAMETER'S VALUE IS NOT A POSITIVE INTEGER",,,
+__BU_MAIN_ARGS_LIB__MSG__ARGC__FUNCTION_ARGC_NOT_POS_INT,This variable stores the message that ,"THE $p_funcname FUNCTION'S ARGUMENT COUNTER $(BU.DechoHighlightVar ""$(echo -n '$')p_argcount"") PARAMETER'S VALUE IS NOT A POSITIVE INTEGER",,,
 __BU_MAIN_ARGS_LIB__MSG__ARGC__FUNCTION_ARGC_NOT_POS_INT__ADVICE,This variable stores the message that ,"The function %s first argument %s's value needs to be an integer, since it is an argument counter",,,
 __BU_MAIN_ARGS_LIB__MSG__ARGC__FUNCTION_AWAITED_ARGC_NOT_POS_INT,This variable stores the message that ,THE %s FUNCTION'S AWAITED ARGUMENTS COUNTER %s PARAMETER'S VALUE IS NOT A POSITIVE INTEGER,,,
 __BU_MAIN_ARGS_LIB__MSG__ARGC__FUNCTION_AWAITED_ARGC_NOT_POS_INT__ADVICE,This variable stores the message that ,"The function %s second argument %s's value needs to be an integer, since it is an argument limit",,,
@@ -189,8 +189,8 @@ __BU_MAIN_BASICMATHS_LIB__MSG__BytesToHuman__,,,,,
 __BU_MAIN_CASE_LIB__MSG__INVALID_ANSWER,This variable stores the message that,Please enter a valid answer (yes / no) !,Veuillez entrer une réponse valide (oui /non) !,,
 __BU_MAIN_CASE_LIB__MSG__ASK_CONTINUE_EXEC,This variable stores the message that,Do you want to continue the script's execution ? (yes / no),Voulez-vous continuer l'exécution du script ? (oui / non),,
 __BU_MAIN_CASE_LIB__MSG__ANSWER_PROMPT,This variable stores the message that,Enter your answer :,Entrez votre réponse,,
-__BU_MAIN_CASE_LIB__MSG__RESUME_EXEC,This variable stores the message that,"Resuming the execution of the $(BU::DechoHighlight ""$__BU_MAIN_PROJECT_NAME"") script",Reprise de l'exécution du script %s,,
-__BU_MAIN_CASE_LIB__MSG__CANCEL_EXEC,This variable stores the message that,"Aborting the $(BU::DechoHighlight ""$__BU_MAIN_PROJECT_NAME"")'s execution",Abandon de l'exécution du projet %s,,
+__BU_MAIN_CASE_LIB__MSG__RESUME_EXEC,This variable stores the message that,"Resuming the execution of the $(BU.DechoHighlight ""$__BU_MAIN_PROJECT_NAME"") script",Reprise de l'exécution du script %s,,
+__BU_MAIN_CASE_LIB__MSG__CANCEL_EXEC,This variable stores the message that,"Aborting the $(BU.DechoHighlight ""$__BU_MAIN_PROJECT_NAME"")'s execution",Abandon de l'exécution du projet %s,,
 ,,,,,
 ,,,,,
 __BU_MAIN_CHECKINGS_LIB__MSG__IsDateYMD_HMS__DATE_BAD_TIMESTAMP_FORMAT,This variable stores the message that,Warning : the date is not formatted in a correct timestamp,Attention : la date n'est pas formatée dans un timestamp correct,,
